# clipmaster

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
clipmaster/: __init__.py  cli.py  config.py  events.py  logging_setup.py  models.py
clipmaster/actions/: __init__.py  _ffmpeg_ops.py  cleanup.py  notes.py  shorts.py  transcript.py
clipmaster/analysis/: __init__.py  audio_features.py  ollama_client.py  transcript_analyzer.py  visual_features.py
clipmaster/media/: __init__.py  chunker.py  ffmpeg.py  probe.py  silence.py
clipmaster/pipeline/: __init__.py  analyze.py
clipmaster/report/: __init__.py  builder.py
clipmaster/server/: __init__.py  __main__.py  app.py  diagnostics.py  jobs.py  ollama_pull.py  schemas.py
clipmaster/transcription/: __init__.py  base.py  faster_whisper_provider.py
config/: default.yaml
desktop/: electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
desktop/src/main/: index.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.tsx  styles.css  types.ts  util.ts
desktop/src/renderer/src/api/: client.ts  useJobStream.ts
desktop/src/renderer/src/components/: ActionModal.tsx  DiagnosticsView.tsx  HomeView.tsx  Modal.tsx  ProcessingView.tsx  ResultsView.tsx  Sidebar.tsx  icons.tsx
tests/: test_analyzer.py  test_chunker.py  test_config.py  test_models.py  test_report.py
